Testing to see if I managed the env variables correctly

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ab377bd4",
    "metadata": {},
    "outputs": [],
@@ -1757,6 +1757,42 @@
     "\n",
     "It is important to pass your api_key to the `InferenceClientModel`. You can access the token from your huggingface account. [check here](https://huggingface.co/docs/hub/en/security-tokens)., and set the access token with the environment variable HF_TOKEN."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "573ed7a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'InferenceClientModel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      4\u001b[39m load_dotenv()\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m model = \u001b[43mInferenceClientModel\u001b[49m(token=os.getenv(\u001b[33m'\u001b[39m\u001b[33mHF_TOKEN\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m      7\u001b[39m agent = CodeAgent(tools=[*tools], model=model)\n",
+      "\u001b[31mNameError\u001b[39m: name 'InferenceClientModel' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "model = InferenceClientModel(token=os.getenv('HF_TOKEN'))\n",
+    "agent = CodeAgent(tools=[*tools], model=model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7464c1ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
