--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1957,6 +1957,54 @@
    "source": [
     "And there ya go. Like I found out some time ago, huggingface is pretty easy to work with. Might take some time to get used to the `gradio` integration, but it's all part of the process."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "048f9b7a",
+   "metadata": {},
+   "source": [
+    "## Complete Example\n",
+    "\n",
+    "Here’s the complete example of the usage of an MCP Client in Gradio:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9604b760",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "_IncompleteInputError",
+     "evalue": "incomplete input (264601347.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mtools = mcp.client.get_tools()\u001b[39m\n                                  ^\n\u001b[31m_IncompleteInputError\u001b[39m\u001b[31m:\u001b[39m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gradio as gr\n",
+    "import os\n",
+    "from smolagents import InferenceClientModel, CodeAgent, MCPClient\n",
+    "\n",
+    "try:\n",
+    "    mcp_client = MCPClient(\n",
+    "        {\"url\": \"https://abidlabs-mcp-tool-http.hf.space/gradio_api/mcp/sse\", \"transport\": \"sse\",}\n",
+    "    )\n",
+    "    tools = mcp.client.get_tools()\n",
+    "\n",
+    "    model = InferenceClientModel(token=os.getenv\"HF_TOKEN\")\n",
+    "    agent = CodeAgent(tools=[*tools, model=model, additional_authorized_imports=[\"json\", \"ast\", \"urllib\", \"base64\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcfb2c31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
