Beginning advanved MCP development

--- a/2_tiny_agents_with_mcp.ipynb
+++ b/2_tiny_agents_with_mcp.ipynb
@@ -103,7 +103,24 @@
     "1. Read text from a file using the filesystem server\n",
     "1. Analyze its sentiment using our Gradio server\n",
     "1. Write the results back to a file\n",
-    "\n"
+    "\n",
+    "# Deployment Considerations\n",
+    "\n",
+    "When deploying your Gradio MCP server to Hugging Face Spaces, you’ll need to update the server URL in your agent configuration to point to your deployed space:\n",
+    "\n",
+    "```javascript\n",
+    "{\n",
+    "    command: \"npx\",\n",
+    "    args: [\n",
+    "        \"mcp-remote\",\n",
+    "        \"https://YOUR_USERNAME-mcp-sentiment.hf.space/gradio_api/mcp/sse\"\n",
+    "    ]\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "This allows your agent to use the sentiment analysis tool from anywhere, not just locally!\n",
+    "\n",
+    "Next up is [Local Tiny Agents with AMD NPU and iGPU Acceleration](https://huggingface.co/learn/mcp-course/en/unit2/lemonade-server), which sounds a lot like something I don't need to know. Let's skip that."
    ]
   }
  ],
