Notes of frustration

--- a/3_advanced_mcp_dev.ipynb
+++ b/3_advanced_mcp_dev.ipynb
@@ -33,13 +33,21 @@
     "\n",
     "I've decided that I'm not doing this. Why give Anthropic full access to your repositories to fix your shitty employees' commit messages? Either put those retards in a wake-up call of a meeting or find new people to work for you. Also, does this *really* require Claude Code? Couldn't you just run local models on a Colab notebook and avoid handing over your companies private information on a SILVER FUCKING PLATTER!?\n",
     "\n",
-    "Like... jesus christ who does this help? Lazy people who don't want to do their jobs correctly? Fuck this."
+    "Like... jesus christ who does this help? Lazy people who don't want to do their jobs correctly? Fuck this. Integrate stronger protocols into your company's workflow or find employees that can think critically.\n",
+    "\n",
+    "Let's skip this and move ahead to the next example. We'll do this in another project folder to avoid a mess."
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "hugging-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
