--- a/4_agents.ipynb
+++ b/4_agents.ipynb
@@ -82,7 +82,18 @@
    "id": "202133aa",
    "metadata": {},
    "source": [
-    "# Messages and Special Tokens"
+    "# Messages and Special Tokens\n",
+    "\n",
+    "Now that we understand how LLMs work, let’s look at how they structure their generations through chat templates.\n",
+    "\n",
+    "Just like with ChatGPT, users typically interact with Agents through a chat interface. Therefore, we aim to understand how LLMs manage chats.\n",
+    "\n",
+    "Up until now, we’ve discussed prompts as the sequence of tokens fed into the model. But when you chat with systems like ChatGPT or HuggingChat, you’re actually exchanging messages. Behind the scenes, these messages are concatenated and formatted into a prompt that the model can understand.\n",
+    "\n",
+    "This is where chat templates come in. They act as the bridge between conversational messages (user and assistant turns) and the specific formatting requirements of your chosen LLM. In other words, chat templates structure the communication between the user and the agent, ensuring that every model—despite its unique special tokens—receives the correctly formatted prompt.\n",
+    "\n",
+    "## Messages: The Underlying System of LLMs\n",
+    "\n"
    ]
   }
  ],
