--- a/4_agents.ipynb
+++ b/4_agents.ipynb
@@ -93,7 +93,23 @@
     "This is where chat templates come in. They act as the bridge between conversational messages (user and assistant turns) and the specific formatting requirements of your chosen LLM. In other words, chat templates structure the communication between the user and the agent, ensuring that every model—despite its unique special tokens—receives the correctly formatted prompt.\n",
     "\n",
     "## Messages: The Underlying System of LLMs\n",
-    "\n"
+    "\n",
+    "System messages (also called System Prompts) define how the model should behave. They serve as persistent instructions, guiding every subsequent interaction.\n",
+    "\n",
+    "```\n",
+    "system_message = {\n",
+    "    \"role\": \"system\",\n",
+    "    \"content\": \"You are a professional customer service agent. Always be polite, clear, and helpful.\"\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "When using Agents, the System Message also gives information about the available tools, provides instructions to the model on how to format the actions to take, and includes guidelines on how the thought process should be segmented.\n",
+    "\n",
+    "# Conversations: User and Assistant Messages\n",
+    "\n",
+    "A conversation consists of alternating messages between a Human (user) and an LLM (assistant).\n",
+    "\n",
+    "Chat templates help maintain context by preserving conversation history, storing previous exchanges between the user and the assistant. This leads to more coherent multi-turn conversations."
    ]
   }
  ],
