--- a/4_agents.ipynb
+++ b/4_agents.ipynb
@@ -109,7 +109,48 @@
     "\n",
     "A conversation consists of alternating messages between a Human (user) and an LLM (assistant).\n",
     "\n",
-    "Chat templates help maintain context by preserving conversation history, storing previous exchanges between the user and the assistant. This leads to more coherent multi-turn conversations."
+    "Chat templates help maintain context by preserving conversation history, storing previous exchanges between the user and the assistant. This leads to more coherent multi-turn conversations.\n",
+    "\n",
+    "```\n",
+    "conversation = [\n",
+    "    {\"role\": \"user\", \"content\": \"I need help with my order\"},\n",
+    "    {\"role\": \"assistant\", \"content\": \"I'd be happy to help. Could you provide your order number?\"},\n",
+    "    {\"role\": \"user\", \"content\": \"It's ORDER-123\"},\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "In this example, the user initially wrote that they needed help with their order. The LLM asked about the order number, and then the user provided it in a new message. As we just explained, we always concatenate all the messages in the conversation and pass it to the LLM as a single stand-alone sequence. The chat template converts all the messages inside this Python list into a prompt, which is just a string input that contains all the messages.\n",
+    "\n",
+    "For example, this is how the SmolLM2 chat template would format the previous exchange into a prompt:\n",
+    "\n",
+    "```\n",
+    "<|im_start|>system\n",
+    "You are a helpful AI assistant named SmolLM, trained by Hugging Face<|im_end|>\n",
+    "<|im_start|>user\n",
+    "I need help with my order<|im_end|>\n",
+    "<|im_start|>assistant\n",
+    "I'd be happy to help. Could you provide your order number?<|im_end|>\n",
+    "<|im_start|>user\n",
+    "It's ORDER-123<|im_end|>\n",
+    "<|im_start|>assistant\n",
+    "```\n",
+    "\n",
+    "However, the same conversation would be translated into the following prompt when using Llama 3.2:\n",
+    "\n",
+    "```\n",
+    "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "\n",
+    "Cutting Knowledge Date: December 2023\n",
+    "Today Date: 10 Feb 2025\n",
+    "\n",
+    "<|eot_id|><|start_header_id|>user<|end_header_id|>\n",
+    "\n",
+    "I need help with my order<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
+    "\n",
+    "I'd be happy to help. Could you provide your order number?<|eot_id|><|start_header_id|>user<|end_header_id|>\n",
+    "\n",
+    "It's ORDER-123<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
+    "```"
    ]
   }
  ],
