--- a/4_agents.ipynb
+++ b/4_agents.ipynb
@@ -150,13 +150,113 @@
     "I'd be happy to help. Could you provide your order number?<|eot_id|><|start_header_id|>user<|end_header_id|>\n",
     "\n",
     "It's ORDER-123<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
-    "```"
+    "```\n",
+    "\n",
+    "# Base Models vs. Instruct Models\n",
+    "\n",
+    "Another point we need to understand is the difference between a Base Model vs. an Instruct Model:\n",
+    "\n",
+    "* A Base Model is trained on raw text data to predict the next token.\n",
+    "* An Instruct Model is fine-tuned specifically to follow instructions and engage in conversations. For example, SmolLM2-135M is a base model, while SmolLM2-135M-Instruct is its instruction-tuned variant.\n",
+    "\n",
+    "To make a Base Model behave like an instruct model, we need to format our prompts in a consistent way that the model can understand. This is where chat templates come in.\n",
+    "\n",
+    "ChatML is one such template format that structures conversations with clear role indicators (system, user, assistant). If you have interacted with some AI API lately, you know that’s the standard practice.\n",
+    "\n",
+    "It’s important to note that a base model could be fine-tuned on different chat templates, so when we’re using an instruct model we need to make sure we’re using the correct chat template."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf28c3ae",
+   "metadata": {},
+   "source": [
+    "# Generic Tool Implementation\n",
+    "\n",
+    "We create a generic `Tool` class that we can reuse whenever we need it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6efed8dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Callable\n",
+    "\n",
+    "class Tool:\n",
+    "    \"\"\"\n",
+    "    A class representing a reusable piece of code (Tool).\n",
+    "\n",
+    "    Attributes:\n",
+    "        name (str): Name of the tool.\n",
+    "        description (str): A textual description of what the tool does.\n",
+    "        func (callable): The function this tool wraps.\n",
+    "        arguments (list): A list of arguments.\n",
+    "        outputs (str or list): The return type(s) of the wrapped function. \n",
+    "    \"\"\"\n",
+    "    def __init__(self,\n",
+    "                 name: str,\n",
+    "                 description: str,\n",
+    "                 func: Callable,\n",
+    "                 arguments: list,\n",
+    "                 outputs: str):\n",
+    "        self.name = name\n",
+    "        self.description = description\n",
+    "        self.func = func\n",
+    "        self.arguments = arguments\n",
+    "        self.outputs = outputs\n",
+    "\n",
+    "    def to_string(self) -> str:\n",
+    "        \"\"\"\n",
+    "        Return a string representation of the tool,\n",
+    "        including its name, description, arguments, and outputs.\n",
+    "        \"\"\"\n",
+    "        args_str = \", \".join([\n",
+    "            f\"{arg_name}: {arg_type}\" for arg_name, arg_type in self.arguments\n",
+    "        ])\n",
+    "\n",
+    "        return (\n",
+    "                f\"Tool Name: {self.name},\"\n",
+    "                f\" Description: {self.description},\"\n",
+    "                f\" Arguments: {args_str},\"\n",
+    "                f\" Outputs: {self.outputs}\"\n",
+    "            )\n",
+    "\n",
+    "        def __call__(self, *args, **kwargs):\n",
+    "            \"\"\"\n",
+    "            Invoke the underlying function (callable) with provided arguments.\n",
+    "            \"\"\"\n",
+    "            return self.func(*args, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52ceb428",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "hugging-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
