inspect module usage example

--- a/4_agents.ipynb
+++ b/4_agents.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6efed8dc",
    "metadata": {},
    "outputs": [],
@@ -232,9 +232,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52ceb428",
+   "metadata": {},
+   "source": [
+    "We could create a Tool with this class using code like the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b38c36dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculator_tool = Tool(\n",
+    "    \"calculator\",                   # name\n",
+    "    \"Multiply two integers.\",       # description\n",
+    "    calculator,                     # function to call\n",
+    "    [(\"a\", \"int\"), (\"b\", \"int\")],   # inputs (names and types)\n",
+    "    \"int\",                          # output\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2716f886",
+   "metadata": {},
+   "source": [
+    "We can also use Python's `inspect` module to retrieve all the information for us:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b0858b34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "\n",
+    "def tool(func):\n",
+    "    \"\"\"\n",
+    "    A decorator that creates a Tool instance from the given function.\n",
+    "    \"\"\"\n",
+    "    # Get the function signature\n",
+    "    signature = inspect.signature(func)\n",
+    "\n",
+    "    # Extract (param_name, param_annotation) pairs for inputs\n",
+    "    arguments = []\n",
+    "    for param in signature.parameters.values():\n",
+    "        annotation_name = (\n",
+    "            param.annotation.__name__\n",
+    "            if hasattr(param.annotation, '__name__')\n",
+    "            else str(param.annotation)\n",
+    "        )\n",
+    "        arguments.append((param.name, annotation_name))\n",
+    "\n",
+    "    # Determine the return annotation\n",
+    "    return_annotation = signature.return_annotation\n",
+    "    if return_annotation is inspect._empty:\n",
+    "        outputs = \"No return annotation\"\n",
+    "    else:\n",
+    "        outputs = (\n",
+    "            return_annotation.__name__\n",
+    "            if hasattr(return_annotation, '__name__')\n",
+    "            else str(return_annotation)\n",
+    "        )\n",
+    "\n",
+    "    # Use the function's docstring as the description (default if None)\n",
+    "    description = func.__doc__ or \"No description provided.\"\n",
+    "\n",
+    "    # The function name becomes the Tool name\n",
+    "    name = func.__name__\n",
+    "\n",
+    "    # Return a new Tool instance\n",
+    "    return Tool(\n",
+    "        name=name,\n",
+    "        description=description,\n",
+    "        func=func,\n",
+    "        arguments=arguments,\n",
+    "        outputs=outputs\n",
+    "    )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ceb428",
+   "id": "e83293ff",
    "metadata": {},
    "outputs": [],
    "source": []
