--- a/4_agents.ipynb
+++ b/4_agents.ipynb
@@ -317,9 +317,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e83293ff",
+   "metadata": {},
+   "source": [
+    "With this decorator in place we can implement oput tool like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a24e574d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool Name: calculator, Description: Multiply two integers., Arguments: a: int, b: int, Outputs: int\n"
+     ]
+    }
+   ],
+   "source": [
+    "@tool\n",
+    "def calculator(a: int, b: int) -> int:\n",
+    "    \"\"\"Multiply two integers.\"\"\"\n",
+    "    return a * b\n",
+    "\n",
+    "print(calculator.to_string())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e83293ff",
+   "id": "1be49d04",
    "metadata": {},
    "outputs": [],
    "source": []
