--- a/4_agents.ipynb
+++ b/4_agents.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6efed8dc",
    "metadata": {},
    "outputs": [],
@@ -241,10 +241,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b38c36dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'calculator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m calculator_tool = Tool(\n\u001b[32m      2\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mcalculator\u001b[39m\u001b[33m\"\u001b[39m,                   \u001b[38;5;66;03m# name\u001b[39;00m\n\u001b[32m      3\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mMultiply two integers.\u001b[39m\u001b[33m\"\u001b[39m,       \u001b[38;5;66;03m# description\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[43mcalculator\u001b[49m,                     \u001b[38;5;66;03m# function to call\u001b[39;00m\n\u001b[32m      5\u001b[39m     [(\u001b[33m\"\u001b[39m\u001b[33ma\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mint\u001b[39m\u001b[33m\"\u001b[39m), (\u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mint\u001b[39m\u001b[33m\"\u001b[39m)],   \u001b[38;5;66;03m# inputs (names and types)\u001b[39;00m\n\u001b[32m      6\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mint\u001b[39m\u001b[33m\"\u001b[39m,                          \u001b[38;5;66;03m# output\u001b[39;00m\n\u001b[32m      7\u001b[39m )\n",
+      "\u001b[31mNameError\u001b[39m: name 'calculator' is not defined"
+     ]
+    }
+   ],
    "source": [
     "calculator_tool = Tool(\n",
     "    \"calculator\",                   # name\n",
@@ -265,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b0858b34",
    "metadata": {},
    "outputs": [],
@@ -321,12 +333,12 @@
    "id": "e83293ff",
    "metadata": {},
    "source": [
-    "With this decorator in place we can implement oput tool like this:"
+    "With this decorator in place we can implement the tool like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a24e574d",
    "metadata": {},
    "outputs": [
@@ -348,12 +360,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1be49d04",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The description is **injected** in the system prompt. Taking the example with which we started this section, here's how it would look like after replacing the `tools_description`:\n",
+    "\n",
+    "![Alt image](/images/Agent_system_prompt_tools.png)"
+   ]
   }
  ],
  "metadata": {
