Agent example about half way done

--- a/4_agents.ipynb
+++ b/4_agents.ipynb
@@ -368,6 +368,173 @@
     "\n",
     "![Alt image](/images/Agent_system_prompt_tools.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b20cc878",
+   "metadata": {},
+   "source": [
+    "# Agent Example\n",
+    "\n",
+    "[Start here](https://huggingface.co/learn/agents-course/en/unit1/dummy-agent-library).\n",
+    "\n",
+    "## Serverless API\n",
+    "\n",
+    "In the Hugging Face exosystem, there's a convenient feature called Serverless API that allows you to easily run inference on many models. There's no installation or deployment required."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c57f0e72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from huggingface_hub import InferenceClient\n",
+    "\n",
+    "client = InferenceClient(model=\"meta-llama/Llama-4-Scout-17B-16E-Instruct\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26065c05",
+   "metadata": {},
+   "source": [
+    "We can use the `chat` method since it's a convenient and reliable way to apply chat templates:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "97dbd411",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paris.\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = client.chat.completions.create(\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\", \"content\": \"The capital of France is\"},\n",
+    "    ],\n",
+    "    stream=False,\n",
+    "    max_tokens=1024,\n",
+    ")\n",
+    "print(output.choices[0]. message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32d9c55e",
+   "metadata": {},
+   "source": [
+    "The chat method is the recommended method to use in order to ensure a smooth transition between models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6272368e",
+   "metadata": {},
+   "source": [
+    "## Dummy Agent\n",
+    "\n",
+    "In the previous sections, we saw that the core of an agent library is to append information in the system prompt.\n",
+    "\n",
+    "This system prompt is a bit more complex than the one we saw earlier, but it already contains:\n",
+    "1. Information about the tools\n",
+    "1. Cycle instructions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2b3b1559",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This system prompt is a bit more complex and actually contains the function description already appended.\n",
+    "# Here we suppose that the textual description of the tools has already been appended.\n",
+    "\n",
+    "SYSTEM_PROMPT = \"\"\"Answer the following questions as best you can. You have access to the following tools:\n",
+    "\n",
+    "get_weather: Get the current weather in a given location\n",
+    "\n",
+    "The way you use the tools is by specifying a json blob.\n",
+    "Specifically, this json should have an `action` key (with the name of the tool to use) and an `action_input` key (with the input to the tool going here).\n",
+    "\n",
+    "The only values that should be in the \"action\" field are:\n",
+    "get_weather: Get the current weather in a given location, args: {\"location\": {\"type\": \"string\"}}\n",
+    "example use :\n",
+    "\n",
+    "{{\n",
+    "  \"action\": \"get_weather\",\n",
+    "  \"action_input\": {\"location\": \"New York\"}\n",
+    "}}\n",
+    "\n",
+    "\n",
+    "ALWAYS use the following format:\n",
+    "\n",
+    "Question: the input question you must answer\n",
+    "Thought: you should always think about one action to take. Only one action at a time in this format:\n",
+    "Action:\n",
+    "\n",
+    "$JSON_BLOB (inside markdown cell)\n",
+    "\n",
+    "Observation: the result of the action. This Observation is unique, complete, and the source of truth.\n",
+    "(this Thought/Action/Observation can repeat N times, you should take several steps when needed. The $JSON_BLOB must be formatted as markdown and only use a SINGLE action at a time.)\n",
+    "\n",
+    "You must always end your output with the following format:\n",
+    "\n",
+    "Thought: I now know the final answer\n",
+    "Final Answer: the final answer to the original input question\n",
+    "\n",
+    "Now begin! Reminder to ALWAYS use the exact characters `Final Answer:` when you provide a definitive answer. \"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14827a52",
+   "metadata": {},
+   "source": [
+    "We need to append the user instruction after the system prompt. This happens inside the `chat` method. We can see this process below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ed9b2dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'system', 'content': 'Answer the following questions as best you can. You have access to the following tools:\\n\\nget_weather: Get the current weather in a given location\\n\\nThe way you use the tools is by specifying a json blob.\\nSpecifically, this json should have an `action` key (with the name of the tool to use) and an `action_input` key (with the input to the tool going here).\\n\\nThe only values that should be in the \"action\" field are:\\nget_weather: Get the current weather in a given location, args: {\"location\": {\"type\": \"string\"}}\\nexample use :\\n\\n{{\\n  \"action\": \"get_weather\",\\n  \"action_input\": {\"location\": \"New York\"}\\n}}\\n\\n\\nALWAYS use the following format:\\n\\nQuestion: the input question you must answer\\nThought: you should always think about one action to take. Only one action at a time in this format:\\nAction:\\n\\n$JSON_BLOB (inside markdown cell)\\n\\nObservation: the result of the action. This Observation is unique, complete, and the source of truth.\\n(this Thought/Action/Observation can repeat N times, you should take several steps when needed. The $JSON_BLOB must be formatted as markdown and only use a SINGLE action at a time.)\\n\\nYou must always end your output with the following format:\\n\\nThought: I now know the final answer\\nFinal Answer: the final answer to the original input question\\n\\nNow begin! Reminder to ALWAYS use the exact characters `Final Answer:` when you provide a definitive answer. '}, {'role': 'user', 'content': \"What's the weather in London?\"}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
+    "    {\"role\": \"user\", \"content\": \"What's the weather in London?\"},\n",
+    "]\n",
+    "\n",
+    "print(messages)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88ca337b",
+   "metadata": {},
+   "source": [
+    "Now let's call the `chat` method:"
+   ]
   }
  ],
  "metadata": {
